--- a/OCR_API/OCR_API.csproj
+++ b/OCR_API/OCR_API.csproj
@@ -26,6 +26,7 @@
     <Folder Include="Exceptions\" />
     <Folder Include="Migrations\" />
     <Folder Include="wwwroot\" />
+    <Folder Include="wwwroot\" />
   </ItemGroup>
 
 </Project>
