--- a/OCR_API/OCR_API.csproj
+++ b/OCR_API/OCR_API.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <Folder Include="Migrations\" />
+    <Folder Include="Nowy folder\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
