--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Build
         run: dotnet build --no-restore
       - name: Publish
-        run: dotnet publish ./OCR_API/OCR_API.csproj -c Release -o ${{ env.DOTNET_ROOT }}/api
+        run: dotnet publish ./OCR_API/OCR_API.csproj -c Release -o ${{ env.DOTNET_ROOT }}
       - name: upload artifact
         uses: actions/upload-artifact@v4.3.3
         with:
